# pjecz-perseo-flask

./: .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  appserver.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
.github/workflows/: gcloud-app-deploy.yml
cli/: app.py
cli/commands/: alimentar_autoridades.py  alimentar_distritos.py  alimentar_modulos.py  alimentar_permisos.py  alimentar_roles.py  alimentar_usuarios.py  alimentar_usuarios_roles.py  cmd_bancos.py  cmd_beneficiarios.py  cmd_beneficiarios_quincenas.py  cmd_centros_trabajos.py  cmd_conceptos.py  cmd_cuentas.py  cmd_db.py  cmd_modulos.py  cmd_nominas.py  cmd_percepciones_deducciones.py  cmd_personas.py  cmd_plazas.py  cmd_puestos.py  cmd_quincenas.py  cmd_tabuladores.py  cmd_timbrados.py  cmd_usuarios.py  respaldar_autoridades.py  respaldar_distritos.py  respaldar_modulos.py  respaldar_roles_permisos.py  respaldar_usuarios_roles.py
config/: firebase.py  settings.py
lib/: exceptions.py  fechas.py  firebase_auth.py  google_cloud_storage.py  pwgen.py  safe_string.py  storage.py  tasks.py  universal_mixin.py
perseo/: app.py  extensions.py
perseo/blueprints/autoridades/: forms.py  models.py  views.py
perseo/blueprints/bancos/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/beneficiarios/: forms.py  models.py  views.py
perseo/blueprints/beneficiarios_cuentas/: forms.py  models.py  views.py
perseo/blueprints/beneficiarios_quincenas/: forms.py  models.py  views.py
perseo/blueprints/bitacoras/: models.py  views.py
perseo/blueprints/centros_trabajos/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/conceptos/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/conceptos_productos/: forms.py  models.py  views.py
perseo/blueprints/cuentas/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/distritos/: forms.py  models.py  views.py
perseo/blueprints/entradas_salidas/: models.py  views.py
perseo/blueprints/modulos/: models.py  views.py
perseo/blueprints/nominas/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/nominas_reportes/: models.py  views.py
perseo/blueprints/percepciones_deducciones/: forms.py  models.py  views.py
perseo/blueprints/permisos/: forms.py  models.py  views.py
perseo/blueprints/personas/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/plazas/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/productos/: forms.py  models.py  views.py
perseo/blueprints/puestos/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/puestos_historiales/: models.py  views.py
perseo/blueprints/quincenas/: events.py  forms.py  models.py  tasks.py  views.py
perseo/blueprints/quincenas_productos/: models.py  tasks.py  views.py
perseo/blueprints/roles/: models.py  views.py
perseo/blueprints/sistemas/: views.py
perseo/blueprints/tabuladores/: forms.py  models.py  tasks.py  views.py
perseo/blueprints/tareas/: models.py  views.py
perseo/blueprints/timbrados/: models.py  tasks.py  views.py
perseo/blueprints/usuarios/: forms.py  models.py  views.py
perseo/blueprints/usuarios_roles/: forms.py  models.py  views.py
perseo/static/js/: socket.io.js  (+2 more)
pjecz_perseo_flask/: main.py
pjecz_perseo_flask/config/: extensions.py  firebase.py  settings.py
pjecz_perseo_flask/lib/: google_cloud_storage.py  pwgen.py  safe_string.py  safe_url.py  tasks.py  universal_mixin.py
tests/: test_fecha_to_quincena.py  test_qinquenio.py  test_quincena.py  test_quincena_count.py
(+298 files in other folders)
