[tool.poetry]
name = "pjecz-perseo-flask"
version = "0.1.1"
description = "Perseo es un sistema web hecho con Flask."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "perseo"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
cryptography = "^41.0.4"
email-validator = "^2.0.0.post2"
flask = "^2.3.3"
flask-login = "^0.6.2"
flask-moment = "^1.0.5"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.3.6"
flask-wtf = "^1.2.1"
google-auth = "^2.23.3"
google-cloud-secret-manager = "^2.16.4"
google-cloud-storage = "^2.12.0"
google-cloud = "^0.34.0"
hashids = "^1.3.1"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.22"
sqlalchemy-utils = "^0.41.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
unidecode = "^1.3.7"
werkzeug = "^2.3.7"
wtforms = "^3.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
pylint = "^3.0.1"
pylint-sqlalchemy = "^0.3.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
